// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextStyled /> should render the component with different props 1`] = `
<span
  className="sc-bdVaJa hDDIiE"
  color="#000"
  fontFamily="Times New Roman"
>
  Corinthians!
</span>
`;

exports[`<TextStyled /> should render the component with the default props 1`] = `
<span
  className="sc-bdVaJa cSUdRe"
>
  Corinthians!
</span>
`;
